# m_ad

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  _config.yml  codecov.yml
.github/: codecov.yml
.github/workflows/: cmake.yml  codeql.yml
assets/css/: style.scss
src/main/cmake/: fortran.cmake  test.cmake  unix.cmake  veclib.cmake
src/main/fortran/: addition_mod.F90  base_mod.F90  cost_matrix_free_mod.F90  cost_mod.F90  first_quadratic_form_mod.F90  inverse_mod.F90  inverse_product_mod.F90  math_mod.F90  matmul_mod.F90  multiplication_mod.F90  second_quadratic_form_mod.F90  second_quadratic_form_symmetric_mod.F90  solver_mod.F90
src/test/fortran/: addition_mod_test.F90  cost_matrix_free_mod_test.F90  cost_mod_test.F90  first_quadratic_form_mod_test.F90  inverse_mod_test.F90  inverse_product_mod_test.F90  multiplication_mod_test.F90  second_quadratic_form_mod_test.F90  second_quadratic_form_symmetric_mod_test.F90  solver_mod_test.F90  test_mod.F90
